# hmC

./: README.md
HomeWork4_new/: CMakeLists.txt  main.cpp
HomeWork4_new/game/: game.cpp  game.h  structures.h
HomeWork4_new/strategies/: CMakeLists.txt  computer.cpp  computer.h  computer_interface.cpp  computer_interface.h  computer_second.cpp  computer_second.h  human.cpp  human.h  interface.h
hw_1/: main.cpp
hw_2/: custom_longlong.cpp  safe_array.cpp  safe_custom_array.cpp
hw_3/: int_list_t.cpp  int_list_t.h  main.cpp
hw_4/: main.cpp
hw_4/game/: CMakeLists.txt  field.cpp  field.h  game.cpp  game.h  step.cpp  step.h
hw_4/strategies/: CMakeLists.txt  comp_1.cpp  comp_1.h  comp_2.cpp  comp_2.h  computer_interface.cpp  computer_interface.h  human.cpp  human.h  interface.h
hw_4_new/: main.cpp
hw_4_new/game/: game.cpp  game.h  structures.h
hw_4_new/strategies/: CMakeLists.txt  computer1.cpp  computer1.h  computer2.cpp  computer2.h  computer_interface.cpp  computer_interface.h  human.cpp  human.h  interface.cpp  interface.h
